--- a/basic python/14(类、对象）总结.md
+++ b/basic python/14(类、对象）总结.md
@@ -1,13 +1,13 @@
-**# 一.类中的方法：对象方法，类方法和静态方法
-##1.对象方法：
-##2.类方法：
-###a.声明前添加@classmethod
-###b.有默认参数cls（当前类），调用的时候不需要给cls传参，系统会自动将调用当前类的类传给cls，类能做的cls都能做
-###c.通过类去调用：类.类方法（）
-##3.静态方法
-##a.声明前加@staticmethod
-##b.没有默认参数
-##c.通过类去调用 ：类.类方法（）
+# 一.类中的方法：对象方法，类方法和静态方法
+## 1.对象方法：
+## 2.类方法：
+### a.声明前添加@classmethod
+### b.有默认参数cls（当前类），调用的时候不需要给cls传参，系统会自动将调用当前类的类传给cls，类能做的cls都能做
+### c.通过类去调用：类.类方法（）
+## 3.静态方法
+## a.声明前加@staticmethod
+## b.没有默认参数
+## c.通过类去调用 ：类.类方法（）
 		class Student:
 		    def __init__(self,name):
 		        self.name = name
@@ -20,12 +20,12 @@
 		    def hit():
 		        print('打人！')
 		Student.destory()
-##4.对象方法、类方法、和静态方法的选择
-###a.对象方法：当函数的方法需要用到对象的属性
-###b.类方法：当实现函数的功能不需要对象的属性，但是需要类的时候
-###c.静态方法：当实现函数功能既不需要对象属性也不需要类的时候
+## 4.对象方法、类方法、和静态方法的选择
+### a.对象方法：当函数的方法需要用到对象的属性
+### b.类方法：当实现函数的功能不需要对象的属性，但是需要类的时候
+### c.静态方法：当实现函数功能既不需要对象属性也不需要类的时候
 
-####练习：数学类，属性：pi  功能：求两个数的和，求一个圆的面积
+#### 练习：数学类，属性：pi  功能：求两个数的和，求一个圆的面积
 
 		import math
 		class My_math:
@@ -37,10 +37,10 @@
 		   def ares(cls,r):
 		   return cls.a*r*r
 # 二.私有化
-##1.定义：在类中，可以通过在属性名或者方法名前加__（双下划线）进行私有化（但不能以__结束）
-###a.私有化属性或者方法在类的外部不能使用
-###b.原理：在属性名或者方法名前有__但不是以__结尾的属性名或者方法名前加了_l类名，导致不能通过原属性名或方法直接访问
-###c.python中没有真正的私有化，不能从访问权限上控制属性和方法的使用
+## 1.定义：在类中，可以通过在属性名或者方法名前加__（双下划线）进行私有化（但不能以__结束）
+### a.私有化属性或者方法在类的外部不能使用
+### b.原理：在属性名或者方法名前有__但不是以__结尾的属性名或者方法名前加了_l类名，导致不能通过原属性名或方法直接访问
+### c.python中没有真正的私有化，不能从访问权限上控制属性和方法的使用
 
 		class Person:
 		    __num=100      #  私有化类的字段
@@ -54,10 +54,10 @@
 		b.sort()
 		print(b)
 # 三.对象属性的getter和setter
-##1. getter ： 在获取对象属性之前要做其他操作，就给这个属性添加getter
-###第一步：命名的时候。属性名前加_(单下划线)
-###第二步：声明一个函数，函数的名字是属性名（不加下划线），不需要额外参数（有返回值），并且函数在声明前使用@property修饰，这个函数的返回值就是获取属性的结果
-###第三步：需要获取属性时，通过  对象.属性 （不带下划线） 获取
+## 1. getter ： 在获取对象属性之前要做其他操作，就给这个属性添加getter
+### 第一步：命名的时候。属性名前加_(单下划线)
+### 第二步：声明一个函数，函数的名字是属性名（不加下划线），不需要额外参数（有返回值），并且函数在声明前使用@property修饰，这个函数的返回值就是获取属性的结果
+### 第三步：需要获取属性时，通过  对象.属性 （不带下划线） 获取
 
 		class 类：
 		  def __init__(self):
@@ -66,9 +66,9 @@
 		  def 变量名（self）:
 		     操作
 		     return 返回值
-##2. setter 在给对象属性赋值之前做其他操作，就给这个属性添加setter(添加setter之前必须给属性添加gettet)
-###第一步：给对象属性加getter
-###第二步：声明一个函数，函数的名字是属性名（不要下划线），需要一个额外的参数（需要赋的值），不用返回值并且函数前使用  @属性名.setter  修饰
+## 2. setter 在给对象属性赋值之前做其他操作，就给这个属性添加setter(添加setter之前必须给属性添加gettet)
+### 第一步：给对象属性加getter
+### 第二步：声明一个函数，函数的名字是属性名（不要下划线），需要一个额外的参数（需要赋的值），不用返回值并且函数前使用  @属性名.setter  修饰
 
 		class 类：
 		   def __init__(self):
@@ -79,7 +79,7 @@
 		      return  返回值
 		   @age.setter
 		   def 变量名（self,赋的值）
-###第三步：需要给属性赋值时，通过对象.属性 （不带下划线）= 值  赋值
+### 第三步：需要给属性赋值时，通过对象.属性 （不带下划线）= 值  赋值
 
 		class Person:
 		    def __init__(self,name= '龙哥'):
@@ -94,8 +94,8 @@
 
 ## def __repr__(self): 修改打印的样式
 
-#四.继承
-##1.定义：子类可以使用父类的内容，但是 父类不能使用子类的内容
+# 四.继承
+## 1.定义：子类可以使用父类的内容，但是 父类不能使用子类的内容
 		python中的类支持继承，并且支持多继承
 		python中默认情况是继承自object（object是python中所有类的基类）
 		
@@ -114,9 +114,9 @@
 		print(stu1.name)
 		print(Student.num)
 		stu1.show_message()
-##2.在子类中添加方法：
-###a.添加一个新的方法：直接写
-###b.修改父类的方法：重新实现父类的方法
+## 2.在子类中添加方法：
+### a.添加一个新的方法：直接写
+### b.修改父类的方法：重新实现父类的方法
     完全重写：覆盖父类的功能（名字和父类方法一样，功能重写）
     在父类基础上添加自己的功能：在函数内部写super().函数名（）
     
@@ -124,7 +124,7 @@
                    子类对象函数中只能调用父类对象函数，类方法和静态方法一样
     super（类，对象）-- 获取对象中父类的部分（要求对象是这个指定类的对象）
     注意：静态方法用不了super()
-###c.子类方法的调用：通过对象或者类调用方法的时候，想看当前子类中是否声明过这个方法，如果声明了就直接调用，如果没有声明过，会去找父类中有没有声明过 ，有就调用，没有的话，继续父类的父类，直到基类都没有的话，报错
+### c.子类方法的调用：通过对象或者类调用方法的时候，想看当前子类中是否声明过这个方法，如果声明了就直接调用，如果没有声明过，会去找父类中有没有声明过 ，有就调用，没有的话，继续父类的父类，直到基类都没有的话，报错
 
 		class Person:
 		    num= 1
@@ -155,9 +155,9 @@
 		        print('我是子类静态')
 		Student.qq()
 		Student.aa()
-##3.在子类中添加属性
-###a.添加子类的字段：直接在子类中添加新的字段
-###b.类的对象属性是通过继承父类的init方法继承下来的（super().__init__（））
+## 3.在子类中添加属性
+### a.添加子类的字段：直接在子类中添加新的字段
+### b.类的对象属性是通过继承父类的init方法继承下来的（super().__init__（））
 
 
 			class Dog:
